WTPlanner/force-app/main/default/objects/Shift__c/fields/Has_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Has_Overlap__c</fullName>
    <description>Automatically set to true when this shift conflicts with another shift assigned to the same user</description>
    <label>Has Overlap</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>