WTPlanner/force-app/main/default/objects/Shift__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>The session this shift belongs to (Master-Detail relationship)</description>
    <label>Session</label>
    <type>MasterDetail</type>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>