WTPlanner/force-app/main/default/objects/Shift__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Assigned User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>