WTPlanner/force-app/main/default/objects/Shift__c/validationRules/Start_Before_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Before_End</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &gt;= End_Time__c</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Start Time must be before End Time</errorMessage>
</ValidationRule>