WTPlanner/force-app/main/default/objects/Shift__c/listViews/All_Shifts.listView-meta.xml
<ListView>
    <fullName>All_Shifts</fullName>
    <columns>NAME</columns>
    <columns>Session__c</columns>
    <columns>User__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Has_Overlap__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Shifts</label>
</ListView>